# wheremoney

./: .gitignore  Dockerfile  README.md  docker-compose.yml  process-compose.yml  pyproject.toml  setup-dev-env.sh
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: frontend.yml
backend/WhereMoney.Api/: .dockerignore  .env.example  Dockerfile  README.md  app.py  config.py  entrypoint.sh  migrate.py  migration_helper.py  pyproject.toml  test_migration_config.py
backend/WhereMoney.Api/controllers/: authcontroller.py  datacontroller.py  importcontroller.py  tablecontroller.py  usercontroller.py  widgetcontroller.py
backend/WhereMoney.Api/debug/: debug.xlsx
backend/WhereMoney.Api/middleware/: __init__.py  jwt_auth.py
backend/WhereMoney.Api/migrations/: MANUAL_TABLES_README.md  env.py  excluded_tables.py
backend/WhereMoney.Api/migrations/versions/: 147e17455c09_add_widget_type_column.py  57bacea2831f_add_new_column_and_table_mappings.py  8faccc744b3c_initial_migration.py  90ae02306dde_add_table_and_column_models_with_.py  96372a9a0398_add_table_ownership.py  c55f262a41bf_add_widget_data_column.py  d4cb157f9b74_add_widget_table_id_column.py  e9726f1b128b_add_widget_table.py
backend/WhereMoney.Api/models/: __init__.py  column.py  table.py  user.py  widget.py
backend/WhereMoney.Api/python_restapi/: __init__.py
frontend/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json
frontend/.github/: copilot-instructions.md
frontend/src/: custom-theme.scss  index.html  main.ts  (+1 more)
(+132 files in other folders)
